--- a/dynamicDashboard/package.json
+++ b/dynamicDashboard/package.json
@@ -19,7 +19,8 @@
     "chart.js": "^4.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
