--- a/dynamicDashboard/package.json
+++ b/dynamicDashboard/package.json
@@ -18,9 +18,15 @@
     "@mui/x-charts": "^7.22.1",
     "chart.js": "^4.4.6",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
-    "react-resizable": "^3.0.5"
+    "react-draggable": "^4.4.6",
+    "react-grid-layout": "^1.5.0",
+    "react-resizable": "^3.0.5",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
